# C-Algorithm-Playground

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
algorithmic_analysis/: time_complexity_analysis.md
algorithmic_challenges/: longest_increasing_subsequence.c
algorithmic_patterns/: sliding_window.c
divide_and_conquer/: CMakeLists.txt  inversions.c  inversions.h
linked_lists/: CMakeLists.txt  circular_linked_list.c  doubly_linked_list.c  singly_linked_list.c  singly_linked_list.h
mathematical/: CMakeLists.txt  karatsuba.c  karatsuba.h
pathfinding/: dijkstra_pathfinder.c  recursive_pathfinder.c
queues/: priority_queue.c  queue_using_array.c  queue_using_linked_list.c
searching/: CMakeLists.txt  binary_search.c  binary_search.h  interpolation_search.c  linear_search.c  linear_search.h
sorting/: CMakeLists.txt  bubble_sort.c  bubble_sort.h  insertion_sort.c  insertion_sort.h  merge_sort.c  merge_sort.h  quick_sort.c  quick_sort.h  selection_sort.c  selection_sort.h  test
stacks/: enhanced_stack.c  stack_using_array.c  stack_using_linked_list.c
tests/: manual_test_binary_search  manual_test_bubble_sort  manual_test_bubble_sort.c  manual_test_insertion_sort  manual_test_insertion_sort.c  manual_test_inversions  manual_test_karatsuba  manual_test_linear_search  manual_test_linked_list  manual_test_merge_sort  manual_test_quick_sort  manual_test_quick_sort.c  manual_test_selection_sort  manual_test_selection_sort.c
tests/divide_and_conquer_lib/: manual_test_inversions.c
tests/linked_list_lib/: manual_test_linked_list.c
tests/mathematical_lib/: manual_test_karatsuba.c
tests/searching_lib/: manual_test_binary_search.c  manual_test_linear_search.c
tests/sorting_lib/: manual_test_bubble_sort.c  manual_test_insertion_sort.c  manual_test_merge_sort.c  manual_test_quick_sort.c  manual_test_selection_sort.c
trees/: AVL_tree.c  binary_tree.c  post_order_traversal.c
